# projeto-final-giovana_filipe

./: README.md
Etapa_1/: README.md  README.md.txt
Etapa_2/: README.md
Etapa_2/testes-project/Project/: CMakeLists.txt
Etapa_2/testes-project/Project/inc/: bmp280.c  bmp280.h  luminosidade.h  mpu6050_i2c.c  mpu6050_i2c.h  wifi_dashboard.h
Etapa_2/testes-project/Project/src/: acelerometro.c  luminosidade.c  main.c  microsd.c  temperatura.c  wifi_dashboard.c
Etapa_2/testes-project/Project/web/: dashboard.html
Etapa_3/: README.md
Etapa_3/Project/: CMakeLists.txt
Etapa_3/Project/inc/: mpu6050_i2c.h  ssd1306_i2c.c  wifi_dashboard.h
Etapa_3/Project/server/: package-lock.json
Etapa_3/Project/src/: main.c  temperatura.c
Etapa_3/Projeto/: .gitignore  CMakeLists.txt  README.md
Etapa_3/Projeto/scripts/: servidor_simples.py  setup.js
Etapa_4/: README.md
Etapa_4/Projeto/: CMakeLists.txt  INSTRUCOES.md
Project/: CMakeLists.txt
Project/inc/: luminosidade.h  microsd.h  wifi_dashboard.h
Project/src/: acelerometro.c  luminosidade.c  main.c  microsd.c  temperatura.c  wifi_dashboard.c
Projeto/: CMakeLists.txt  package-lock.json  package.json
Projeto/inc/: aht10.h  display.h  estado_caixa.h  keypad.h  luminosidade.h  lwipopts.h  microsd.h  mpu6050_i2c.c  servo.h  ssd1306_i2c.h  wifi_dashboard.h
Projeto/scripts/: run-tests.js  simulate-pico.js
Projeto/server/: server.js  server.ts
Projeto/src/: acelerometro.c  display.c  keypad.c  main.c  microsd.c  servo.c  umidade.c  wifi_dashboard.c
Projeto/web/: dashboard.html  dashboard.js
(+29 files in other folders)
